TbaMUD is currently being developed by The Builder Academy. If you need any
help, find any bugs, or have ideas for improvement please stop by TBA. 
Rumble
The Builder Academy
builderacademy.net 9091
 
tbaMUD 3.53
[Jun 28 2007]
  Updated World and files for 3.53 release.
[Jun 16 2007] - Rumble
  Missed replacing NUM_SPELLS -1 with NUM_SPELLS, corrected. (thanks Kyle)
[Jun 01 2007] - Rumble
  Renamed Gossip: to Gemote: to match the command when players use gemote.
  Added channel emotes by matching player name to first word. i.e. gossip
  rumble sporks Manivo ruthlessly. (thanks Mordecai)
  Renamed squelch to mute to match the command.
[May 17 2007] - Rumble
  Added AFF_FLYING/SCUBA and appropriate checks in act.movement.c. Room sector types IN FLIGHT and UNDERWATER are finally being used!
  Removed all of the Dragon_Breathes.
  Removed context help system.
  Added invis level on reconnect.
[May 15 2007] - Rumble
  Fixed object stacking to match s-desc and item_number.
  Added wizupdate command.
  Added valid_dg_target check to object remove trigs.
  Fixed shops and affects to work with 128 bits.
  Removed Hometown and Languages.
[May 09 2007] - Rumble
  Fixed nogos/nowiz from flagging everyone in who.
  Fixed numerous SYSERR's where mobs were using player only specials.
  Added 128 bits patch by Niese Petersen with numerous updates and fixes.

tbaMUD 3.52
[Apr 14 2007] - Rumble
  IP's only visible to LVL_GOD and above now for the paranoid people out there.
[Apr 13 2007] - Rumble
  Finally made gemote actually work like emote and not just use socials. (thanks Fizban)
  Reworded and standardized the trigedit attachment menu.
  Numerous minor fixes taken from the latest CWG release. (thanks Zizazat)
  Update to is_number to check for negative numbers. (thanks Kyle)
  Update to isname to disallow abbreviated numbers. (thanks Sryth)
[Apr 08 2007] - Rumble
  Removed all usage of CAP(str) causing a memory leak (thanks Kyle).
  Removed object type TRAP.