@@ -3473,7 +3473,7 @@ Never around when required.
 All the lonely people :(
 Tres bizarre! $n kisses $mself all over $s body.
 You kiss $M on $S $t.
-$N kisses $N on $S $t.
+$n kisses $N on $S $t.
 $n kisses you on your $t.
 You kiss $p.
 $n kisses $p.
